--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <meta charset="utf-8">
         <title>Calculator</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <!-- perintah untuk menghubungkan ke file css -->
     </head>
     <body>
         <div class="calculator">
             <input type="text" class="calculator-screen" value="0" disabled />
             <div class="calculator-keys">
+                <!-- Tombol - tombol pada kalkulator -->
                 <div class="row">
                     <button class="all-clear">AC</button>
                     <button class="percentage">%</button>
@@ -41,5 +43,6 @@
             </div>
         </div>
         <script type="text/javascript" src="script.js"></script>
+        <!-- perintah untuk menghubungkan ke file java script -->
     </body>
 </html>
